# gateio-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.rs  cd.md  plan_spot.md
examples/: async_example.rs  sync_example.rs
examples/sync/: amend_batch_orders.rs  amend_order.rs  cancel_all_open_orders.rs  cancel_all_price_orders.rs  cancel_batch_orders.rs  cancel_order.rs  cancel_price_order.rs  countdown_cancel_all.rs  create_batch_orders.rs  create_cross_liquidate_orders.rs  create_order.rs  create_price_order.rs  get_account.rs  get_account_book.rs  get_batch_user_fee.rs  get_candlesticks.rs  get_currencies.rs  get_currency.rs  get_currency_pair.rs  get_currency_pairs.rs  get_fee.rs  get_insurance_history.rs  get_market_trades.rs  get_my_trades.rs  get_open_orders.rs  get_order.rs  get_orderbook.rs  get_orders.rs  get_price_order.rs  get_price_orders.rs  get_server_time.rs  get_ticker.rs
src/: client.rs  error.rs  lib.rs  utils.rs  version.rs
src/api/spot/: amend_batch_orders.rs  amend_order.rs  cancel_all_open_orders.rs  cancel_all_price_orders.rs  cancel_batch_orders.rs  cancel_order.rs  cancel_price_order.rs  countdown_cancel_all.rs  create_batch_orders.rs  create_cross_liquidate_orders.rs  create_order.rs  create_price_order.rs  get_account.rs  get_account_book.rs  get_batch_user_fee.rs  get_candlesticks.rs  get_currencies.rs  get_currency.rs  get_currency_pair.rs  get_currency_pairs.rs  get_fee.rs  get_insurance_history.rs  get_market_trades.rs  get_my_trades.rs  get_open_orders.rs  get_order.rs  get_orderbook.rs  get_orders.rs  get_price_order.rs  get_price_orders.rs  get_server_time.rs  get_ticker.rs  mod.rs  order.rs
src/http/: credentials.rs  error.rs  method.rs  mod.rs  request.rs
src/hyper/: client.rs  error.rs  mod.rs  response.rs
src/ureq/: client.rs  error.rs  mod.rs  response.rs
