[package]
name = "gateio-rs"
version = "0.1.0"
edition = "2024"
authors     = ["Artem Volkov"]
description = "Короткое описание: что делает библиотека."
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/you/my_cool_lib"
homepage    = "https://github.com/you/my_cool_lib"
keywords    = ["example", "template"]
categories  = ["development-tools"]
# TODO:

[features]
default = ["enable-ureq"]           # ← чтобы не путаться с ключевым словом async
enable-hyper = [ "hyper", "hyper-tls", "serde_json", "futures-util", "tokio" ]
enable-ureq = [ "ureq", "serde_json" ]

[dependencies]
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", optional = true, default-features = false, features = ["json"] }
async-trait = "0.1.88"
http = "1.3.1"
# signature
hmac = "0.12.0"
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.0", features = ["serde", "zeroize", "rand_core", "digest", "pkcs8", "pem"] }

# enable-hyper
hyper = { version = "1.6.0", optional = true, features = ["full"] }
hyper-tls = { version = "0.6.0", optional = true }
futures-util = {version = "0.3.31", optional = true }
serde_json = { version = "1.0.140", optional = true }

# enable-ureq
ureq = { version = "2.4.0", optional = true }

anyhow = "1.0.98"
hex = "0.4.3"
